# pre-commit-sql-remove-lines

./: .flake8  .justfile  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
config/: dev.yml  prod.yml
disney_precommit_sql_file/: precommit_sql_clean.py
src/: precommit_sql_clean.py
tests/: fail.sql  test_line_removal.py
