[tool.poetry]
name = "disney_precommit_sql_file"
version = "0.1.0"
description = "Precommit hook to remove all extra lines at the end of a sql file."
authors = ["chad.upjohn.-nd@disneystreaming.com"]

[tool.poetry.dependencies]
python = "~3.10"
pyfakefs = "^4.5.6"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
pytest = "^=6.2.0"
pytest-env = "^0.6.2"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths = ["src","tests"]
multi_line_output=3
include_trailing_comma="True"
force_grid_wrap=0
use_parentheses="True"
line_length=120
skip=".vscode, .tox, .git, node_modules"
default_section="THIRDPARTY"
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.pytest.ini_options]
addopts = "--strict-markers -v" # strict markers to ensure that the marker names aren't mispelled
testpaths = "tests"
markers = [
    "unit_test"
]
filterwarnings = [
    "ignore:Using or importing the ABCs",
    "ignore:the imp module is deprecated in favour of importlib",
]
env = [
    "LOG_THRESHOLD = INFO",
    "MODE = local",
    "INFRASTRUCTURE = test",
    "TASK_TOKEN = test",
]

[tool.black]
line-length = 120
exclude = '''
/(
  # Directories
    \.eggs
  | \.git
  | \.vscode
  | \.tox
  | \.venv
  | \.ropeproject
  | build
  | venv
  | .*egg-info
)/
'''

